[B]Retrospect v5.2.20 - Changelog - 2021-01-16[/B]

This version of Retrospect focusses on artwork: we introduced poster artwork for channels and shows. Not all channels support them, but more will come over time.

There are also some channels fixes in this build: VTM and related channels  now redirect to the VTM Go add-on instead of Retrospect. Their add-on handles the VTM channel very nicely. MTV and UR Play.se have also been fixed.

[B]Framework related[/B]
* Changed: Don't generate settings.xml if no template is present.
* Added: Content type option to MediaItem and main listing.
* Changed: Specify `offscreen` for ListItems to improve performance.
* Changed: Code clean-up for old code related to proxies.

[B]GUI/Settings/Language related[/B]
* Added: Poster artwork for Channels and MediaItems.

[B]Channel related[/B]
* Added: Movies to Kijk.nl channel (Fixes #1462)
* Updated: RTL XL thumbs for shows.
* Updated: VTM.be, Stievie.be and VTM Nieuws are now redirecting to the VTM GO add-on (Fixes #1409, See #1462)
* Fixed: Some vier.be clips did not play (See #1463)
* Renamed: dplay.se is now discoveryplus.se (Fixes #1467).
* Fixed: MTV.nl and MTV.de stopped working
* Fixed: UR Play broke due to URL changes.
* Updated: Channel artwork for RTL XL and Kijk.nl.
* Updated: Dumpert artwork.
* Updated: Pathe artwork.
* Updated: NPO Start artwork.